<resources>
    <string name="app_name">PantryTracker</string>
    <string name="take_photo">Take Photo</string>
    <string name="title_camera">Camera</string>
    <string name="title_inventory">Inventory</string>
    <string name="title_addremove">Add/Remove</string>
    <string name="description">Description</string>
    <string name="barcode_number">Barcode Number</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
</resources>