<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.myapplication.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_addremove"
            app:destination="@id/navigation_addremove"
            app:launchSingleTop="true"
            app:popUpTo="@+id/navigation_camera"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="com.example.myapplication.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_addremove"
        android:name="com.example.myapplication.ui.addremove.AddRemoveFragment"
        android:label="@string/title_addremove"
        tools:layout="@layout/fragment_addremove" >
        <action
            android:id="@+id/action_navigation_addremove_to_navigation_camera"
            app:destination="@id/navigation_camera" />
        <argument
            android:name="barcodeString"
            android:defaultValue=""
            app:argType="string" />
    </fragment>
</navigation>